# FlightSim

./: .gitignore  .gitmodules  BuildMode.h  CMakeLists.txt  LICENSE  README.md  SimConnectHandler.cpp  SimConnectHandler.h  StuartClient.cpp  StuartClient.vcxproj  StuartClient.vcxproj.filters  StuartServer.sln  TCPServer.cpp  TCPServer.h  UnityConnection.cpp  UnityConnection.h  calculate_legs.cpp  calculate_legs.h  main.cpp
flight-simulator.wiki/: 1_Predecessor.md  2_Requirements.md  3_Architecture_And_Design.md  4_Implementation_And_Tests.md  5_Installation.md  6_Recommendations.md  Home.md  _sidebar.md
include/: calculations.h  controller.h  cout_output_strategy.h  csv_input_strategy.h  flight_data.h  input_strategy.h  math_func.h  max_piston_strategy.h  mfs_input_strategy.h  output_strategy.h  smooth_step_piston_strategy.h  tcp_client.h  tcp_output_strategy.h
main/: CMakeLists.txt  main.cpp
src/: calculations.cpp  controller.cpp  cout_output_strategy.cpp  csv_input_strategy.cpp  math_func.cpp  mfs_input_strategy.cpp  smooth_step_piston_strategy.cpp  tcp_client.cpp  tcp_output_strategy.cpp
tests/: CMakeLists.txt  math_func.cpp  smooth_step_piston_strategy.cpp  tcp_output_strategy.cpp
